[gd_scene load_steps=4 format=3 uid="uid://dtjel0b6hp2pa"]

[ext_resource type="Script" path="res://double_pendulum_3d.gd" id="1_ssp5r"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1h5y7"]

[sub_resource type="SphereMesh" id="SphereMesh_astre"]

[node name="DoublePendulum3d" type="Node3D"]
script = ExtResource("1_ssp5r")

[node name="Arm1" type="Node3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -0.000650167, 0, 0.00123072)

[node name="String1" type="MeshInstance3D" parent="Arm1"]
transform = Transform3D(9.55343e-18, 8.74228e-09, 0.005, 0.005, -8.74228e-09, 0, 2.18557e-10, 0.2, -2.18557e-10, 0.0012877, 1.00256, -0.000618279)
mesh = SubResource("CylinderMesh_1h5y7")

[node name="Bob2" type="MeshInstance3D" parent="Arm1"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 8.73115e-11, 0.767384, 1.01863e-09)
mesh = SubResource("SphereMesh_astre")
skeleton = NodePath("")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.571424, 4.32495)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.571424, 4.32495)

[node name="Arm2" type="Node3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0.00238586, -0.00603318, 0.00126172)

[node name="String2" type="MeshInstance3D" parent="Arm2"]
transform = Transform3D(0.005, 0, 0, 0, 0.2, 0, 0, 0, 0.005, 0.00154297, 0.551972, -0.00151759)
sorting_use_aabb_center = false
mesh = SubResource("CylinderMesh_1h5y7")

[node name="Bob2" type="MeshInstance3D" parent="Arm2"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.00025527, 0.316794, -0.00089931)
mesh = SubResource("SphereMesh_astre")
skeleton = NodePath("")
